--- a/src/app/medicine/medicine.component.html
+++ b/src/app/medicine/medicine.component.html
@@ -1,143 +1,11 @@
-<nav-bar></nav-bar>
-<div class="container">
-<div class="page-header center-block">
+<div  fxLayout="column"
+      fxLayoutGap="30px"
+      fxLayoutAllign="center center" >
   <h1 class="text-center">Enter new medicine</h1>
-</div>
 
-<form [formGroup]="medicineForm" (ngSubmit)="submitMedicine()">
-  <div class="form-group">
-    <label for="medicineName"> Name </label>
-    <input formControlName="medicineName"
-           type="text" 
-           class="form-control"
-           id="medicineName"
-           placeholder="Please enter the medicine name">
-      <div *ngIf="medicineName.touched && medicineName.errors?.required"
-           class="alert alert-danger">
-           You must enter a valid medicine name
-      </div>
-      <div *ngIf="medicineName.errors?.minlength"
-            class="alert alert-danger">
-            Medicine name should have minimum {{medicineName.errors.minlength.requiredLength}} characters. 
-      </div>  
-      <!-- <div *ngIf="medicineName.errors.cannotContainSpace" class="alert alert-danger"> medicineName cannon contain space </div> -->  
-  </div>
-  <div class="form-group">
-    <label for="manufacturer"> Manufacturer </label>
-    <input type="text"
-     class="form-control"
-     id="manufacturer"
-     placeholder="Please enter the manufacturers name"
-     formControlName="manufacturer">
-     <div *ngIf="manufacturer.touched && manufacturer.errors?.required"
-      class="alert alert-danger">
-      You must specify the manufacturers name
-    </div>
-  </div>
-  <div class="form-group">
-    <label class="center-block" for="composition"> Composition </label>
-    <textarea id="composition"
-     class="form-control"
-     rows="3"
-     placeholder="Please specify the composition"
-     formControlName="composition">
-     <div *ngIf="composition.touched && composition.errors?.required"
-     class="alert alert-danger">
-     Please specify the composition of the medicine.
-    </div>
-    </textarea>
-  </div>
+  <nst-medicine-table> </nst-medicine-table>
 
-  <!-- u form-inline treba srediti width -->
-  <div formGroupName="currency" class="form-inline">
-    <div class="form-group">
-      <label class="sr-only" for="price">Price (in dinars)</label>
-      <div class="input-group">
-        <div class="input-group-addon">DIN</div>
-        <input type="number"
-               class="form-control"
-               id="price"
-               placeholder="Price"
-               formControlName="price">
-        <div class="input-group-addon">.00</div>
-        <div *ngIf="price.touched && price.errors?.required"
-        class="alert alert-danger">
-        Please specify the price
-       </div>
-       <!--
-         OVDE SAMO BROJKE MOGU DA SE UNOSE
-          <div *ngIf="price.touched && price.invalid"
-          class="alert alert-danger">
-          Please specify the price
-        </div>
-      -->
-      </div>
-    </div>
-
-    <div class="form-group pull-right">
-      <label for="packing">Packing type</label>
-      <select name="packing" id="packing" class="form-control">
-        <option value="videcemo"></option>
-      </select>
-    </div>
-  </div>
-
-  <div class="form-group">
-    <label for="quantity"> Quantity </label>
-    <input type="number"
-           id="quantity"
-           class="form-control"
-           placeholder="Please specify the quantity"
-           formControlName="quantity">
-           <div *ngIf="quantity.touched && quantity.errors?.required"
-           class="alert alert-danger">
-           Please specify the quantity
-          </div>
-          <!-- 
-            OVDE ISTO SAMO INTEGERI DA SE UNOSE 
-          <div *ngIf="quantity.touched && quantity.invalid"
-          class="alert alert-danger">
-          Please specify the quantity
-         </div>
-        -->
-  </div>
-
-  <!-- Pazi, forma u okviru forme -->
-  <br>
-  
-    <div formGroupName="dates" class="form-inline">
-      <div class="form-group">
-        <label for="expirationDate"> Expiration date </label>
-        <input type="date"
-         id="expirationDate"
-          class="expirationDate"
-           placeholder="Please specify the expiration date"
-           formControlName="expirationDate">
-      </div>
-      <div class="form-group pull-right">
-        <label for="productionDate"> Production date</label>
-        <input type="date"
-         id="productionDate"
-          class="productionDate"
-           placeholder="Please specify the production date"
-           formControlName="productionDate">
-      </div>
-    </div>
-
-  <br>
-  <br>
-  <button type="submit"
-          class="btn btn-primary btn-lg btn-block"
-          [disabled]="!medicineForm.valid">Submit</button>
-
-  <p>Form value: {{ medicineForm.value | json }}</p>
-  <p>Form value: {{ medicineForm.status | json }}</p>
-
-  <!-- tabelarni prikaz svih lekova -->
-    <!-- ovo ce mi biti jako potrebno, tabelarno cuvanje leka! -->
-
-
-</form>
-<br>
-<medicine-table></medicine-table>
+  <button mat-raised-button id="medicine-submit"
+          color="primary"
+          click="submitMedicine()"> Sumbit medicine </button>
 </div>
