--- a/src/app/bill/bill.component.html
+++ b/src/app/bill/bill.component.html
@@ -1,4 +1,3 @@
-<nav-bar></nav-bar>
 <div class="page-header center-block">
   <h1 class="text-center">Issuing a bill</h1>
 </div>
@@ -9,7 +8,10 @@
         <div class="special-width">
           <div class="form-group">
             <label for="issueDate">Issue date</label>
-            <input type="date" class="form-control" id="issueDate" formControlName="issueDate">
+            <input type="date"
+             class="form-control"
+              id="issueDate"
+              formControlName="issueDate">
           </div>
           <div class="form-group">
             <label for="issuePlace">Issue place</label>
