--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -1,22 +1,29 @@
-<div class="container">
-    <div class="row">
-        <div class="offset-col-2">
-            <form [formGroup]="loginForm" (ngSubmit)="login()">
-                <div class="form-group">
-                    <label for="username">Username</label>
-                    <input id="username" type="text" class="form-control" formControlName="username">
-                </div>
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input id="password" type="text" class="form-control" formControlName="password">
-                </div>
-                <button class="btn btn-success btn-lg btn-block" type="submit">Log in</button>
-                <button type="submit">Login</button>
-                <!-- da se ubaci da zapamti token? -->
-                <label for="remember">
-                    <input type="checkbox" checked="checked" name="remember"> Remember me
-                </label>
-            </form>
-        </div>
-    </div>
-</div>
+<section class="login-form">
+    <form [formGroup]="loginForm"
+      (ngSubmit)="login()"
+      fxLayout="column"
+      fxLayoutAlign="center center"
+      fxLayoutGap="10px">
+      <mat-form-field>
+        <input type="email"
+         placeholder="Enter your username"
+         matInput>
+      </mat-form-field>
+        <mat-form-field hintLabel="Should have at least 6 characters.">
+          <input type="password"
+          placeholder="Enter your password"
+          matInput
+          formControlName="password">
+      </mat-form-field>
+        <button mat-raised-button color="primary" type="submit">Login</button>
+        <!-- da se ubaci da zapamti token? -->
+        <mat-checkbox fxAllign="center"
+         color="accent"
+         name="agree">
+         Agree to terms and conditions
+       </mat-checkbox>
+    </form>
+</section>
+
+
+
