--- a/src/app/medicine/medicine.component.css
+++ b/src/app/medicine/medicine.component.css
@@ -1,5 +1,4 @@
-.center-block {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
+#medicine-submit{
+  width: 100px;
+  text-align: center;
+}
