--- a/src/app/medicine/medicine.component.html
+++ b/src/app/medicine/medicine.component.html
@@ -1,7 +1,7 @@
 <div  fxLayout="column"
       fxLayoutGap="30px"
       fxLayoutAllign="center center" >
-  <h1 class="text-center">Enter new medicine</h1>
+  <h1 class="text-center">{{pageTitle}}</h1>
 
   <nst-medicine-table> </nst-medicine-table>
 
