--- a/src/app/navigation/nav-bar/nav-bar.component.html
+++ b/src/app/navigation/nav-bar/nav-bar.component.html
@@ -11,10 +11,10 @@
        <!-- want to displayed if we are not authenticated -->
       <li *ngIf="!isAuth"> <a routerLink="/signup"> SignUp </a> </li>
       <li *ngIf="!isAuth"> <a routerLink="/login"> Login </a> </li>
-      <li *ngIf="isAuth"> <a routerLink="/medicine"> Medicine </a> </li>
-      <li *ngIf="isAuth"> <a routerLink="/perscription"> Perscription </a> </li>
-      <li *ngIf="isAuth"> <a routerLink="/bills"> Bills </a> </li>
-      <li *ngIf="isAuth"> <a style="cursor: pointer;" (click)="onLogout()">Logout</a>
+      <li *ngIf="!isAuth"> <a routerLink="/medicine"> Medicine </a> </li>
+      <li *ngIf="!isAuth"> <a routerLink="/perscription"> Perscription </a> </li>
+      <li *ngIf="!isAuth"> <a routerLink="/bills"> Bills </a> </li>
+      <li *ngIf="!isAuth"> <a style="cursor: pointer;" (click)="onLogout()">Logout</a>
     </ul>
   </div>
 </mat-toolbar>
