moved to from Angular 5.2 Angular 7.3, removed angular/flex package

--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -1,9 +1,6 @@
-<section fxFlexFill class="wrapper login-form row-height">
+<section class="wrapper login-form row-height">
     <form [formGroup]="loginForm"
-      (ngSubmit)="login()"
-      fxLayout="column"
-      fxLayoutAlign="center center"
-      fxLayoutGap="10px">
+      (ngSubmit)="login()">
       <mat-form-field>
         <input type="email"
          placeholder="Enter your username"
