--- a/src/app/medicine/medicine-table/medicine-table.component.html
+++ b/src/app/medicine/medicine-table/medicine-table.component.html
@@ -1,4 +1,4 @@
-<div fxLayoutAllign="center center">
+<div>
   <mat-form-field fxFlex="40%">
     <input matInput type="text" name="filerInput"
      id="filter" (keyup)="doFilter($event.target.value)"
