--- a/src/app/navigation/nav-bar/nav-bar.component.html
+++ b/src/app/navigation/nav-bar/nav-bar.component.html
@@ -6,8 +6,8 @@
     </button>
   </div>
   <div> <a routerLink="/">  LOGO  </a> </div>
-  <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.lt-md>
-    <ul fxLayout fxLayoutGap="10px" class="navigation-links">
+  <div>
+    <ul class="navigation-links">
        <!-- want to displayed if we are not authenticated -->
       <li *ngIf="!isAuth"> <a routerLink="/signup"> SignUp </a> </li>
       <li *ngIf="!isAuth"> <a routerLink="/login"> Login </a> </li>
