--- a/src/app/login-form/login.html
+++ b/src/app/login-form/login.html
@@ -1,6 +1,4 @@
-<form fxLayout="column"
-      fxLayoutAlign="center center"
-      fxLayoutGap="10px">
+<form>
   <mat-form-field>
     <input type="text"
     name="username"
