--- a/src/app/medicine/medicine.component.html
+++ b/src/app/medicine/medicine.component.html
@@ -1,6 +1,4 @@
-<div  fxLayout="column"
-      fxLayoutGap="30px"
-      fxLayoutAllign="center center" >
+<div>
   <h1 class="text-center">{{pageTitle}}</h1>
 
   <nst-medicine-table> </nst-medicine-table>
