--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,17 @@
+<nst-ui-toolbar [isLoggedIn]="isLoggedIn" [title]="title" [sidenav]="sidenav" (logout)="logout($event)"> </nst-ui-toolbar>
+
 <mat-sidenav-container>
-  <mat-sidenav #sidenav role="navigation">
-    <!--side navigation, by default toggle is hidden opened=true -->
-    <nst-side-nav (sidenavToggle)="sidenav.close()"> </nst-side-nav>
+  <mat-sidenav [opened]="isSidenaveOpen(sidenav, true)" #sidenav mode="side" class="app-sidenav">
+    <nav>
+      <a mat-button class="nav-link" *ngFor="let link of links"
+        [routerLink]="link.path" routerLinkActive="active">
+        <mat-icon>{{link.icon}}</mat-icon>
+        {{link.label}}
+      </a>
+    </nav>
   </mat-sidenav>
-  <mat-sidenav-content>
-    <nst-nav-bar (sideNavToggle)="sidenav.toggle()"> </nst-nav-bar>
-    <main>
-      <router-outlet></router-outlet>
-    </main>
-  </mat-sidenav-content>
+
+  <div class="app-content">
+    <router-outlet></router-outlet>
+  </div>
 </mat-sidenav-container>
