--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -1,56 +1,65 @@
-<div class="container">
-    <div class="card-wrapper">
-        <mat-card class="mat-elevation-z1">
-            <mat-card-header>
-              <mat-card-title>
-                <h2>Login</h2>
-              </mat-card-title>
-            </mat-card-header>
-      <!--USERNAME INPUT START-->
-          <form [formGroup]="loginForm" class="login-form"
-            (ngSubmit)="login()">
-            <mat-form-field>
-              <input type="email"
-              placeholder="Enter your username"
-              matInput
-              formControlName="Username">
-            </mat-form-field>
-              <mat-error class="invalid-feedback" *ngIf="isLoginFormValid(loginForm.get('username'))">
-                Username shoud be more than 3 characters long.
-              </mat-error>
-          <!--USERNAME INPUT END-->
+<!-- <div class="container"> -->
+<div class="card-wrapper">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>
+        <h2>Login</h2>
+      </mat-card-title>
+    </mat-card-header>
+    <!--USERNAME INPUT START-->
+    <form [formGroup]="loginForm" (ngSubmit)="login()">
+      <mat-card-content>
+        <mat-form-field>
+          <input
+            type="email"
+            placeholder="Enter your username"
+            matInput
+            formControlName="Username"
+          />
+        </mat-form-field>
+        <!--
+        <mat-error
+          class="invalid-feedback"
+          *ngIf="isLoginFormValid(loginForm.get('Username'))"
+        >
+          {{ validationMessages.required }}
+        </mat-error>
+        -->
+        <!--USERNAME INPUT END-->
 
-          <!--PASSWORD INPUT START -->
-              <mat-form-field hintLabel="Should have at least 6 characters.">
-                <input type="password"
-                placeholder="Enter your password"
-                matInput
-                formControlName="Password">
-            </mat-form-field>
-            <mat-error class="invalid-feedback" *ngIf="isLoginFormValid(loginForm.get('password'))">
-              The password must be longer than 3 characters
-            </mat-error>
-          <!--PASSWORD INPUT END -->
-              <!-- da se ubaci da zapamti token? -->
-              <!--
-              <mat-checkbox fxAllign="center"
-              color="accent"
-              name="agree"
-              formControlName="checkbox">
-              Agree to terms and conditions
-            </mat-checkbox>
-            -->
-            <button mat-raised-button color="primary"
-                    type="submit"
-                    [disabled]="!loginForm.valid">
-                    Login
-            </button>
-
-          </form>
-        </mat-card>
-    </div>
+        <!--PASSWORD INPUT START -->
+        <mat-form-field hintLabel="Should have at least 6 characters.">
+          <input
+            type="password"
+            placeholder="Enter your password"
+            matInput
+            formControlName="Password"
+          />
+        </mat-form-field>
+      </mat-card-content>
+      <!--
+        <mat-error
+          class="invalid-feedback"
+          *ngIf="isLoginFormValid(loginForm.get('Password'))"
+        >
+          {{ validationMessages.password }}
+        </mat-error>
+        -->
+      <mat-card-actions>
+        <button
+          mat-raised-button
+          color="primary"
+          type="submit"
+          [disabled]="!loginForm.valid"
+        >
+          Login
+        </button>
+      </mat-card-actions>
+    </form>
+  </mat-card>
 </div>
+<!-- </div> -->
 <div class="background" [ngClass]="chosenFilter"></div>
-
-
-
+<pre>
+  {{ loginForm.value }}
+</pre>
