--- a/src/app/navigation/ui-toolbar/ui-toolbar.component.html
+++ b/src/app/navigation/ui-toolbar/ui-toolbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary" class="mat-elevation-z4">
     <span>
-      <button *ngIf="!isLoggedIn" (click)="sidenav.toggle()" mat-mini-fab>
+      <button *ngIf="isLoggedIn" (click)="sidenav.toggle()" mat-mini-fab>
         <mat-icon>menu</mat-icon>
       </button>
       <span class="logo">
